--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@types/react-native-canvas": "^0.1.7",
     "expo": "~41.0.1",
+    "expo-constants": "^10.1.3",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
